# unravel

./: .env.example  .gitignore  CLAUDE.md  GOLDEN.md  MY_APPROACH_AND_THOUGHTS.md  PRD.md  README.md  docker-compose.yml
.claude/commands/: checkpoint.md  next.md  recover.md  review.md  status.md  stuck.md
docs/: ARCHITECTURE.md  DECISIONS.md  IMPLEMENTATION.md  TESTING.md  architecture-diagram.html
src/backend/: .dockerignore  Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/analysis/: context.py
src/backend/app/api/: routes.py  session_routes.py
src/backend/app/bundle/: chunker.py  classifier.py  parser.py
src/backend/app/evals/: __init__.py  evaluator.py
src/backend/app/llm/: anthropic_provider.py  openai_provider.py  prompts.py  provider.py
src/backend/app/logging/: llm_logger.py
src/backend/app/models/: schemas.py
src/backend/app/rag/: __init__.py  embedder.py  retriever.py
src/backend/app/sessions/: metadata.py  persistence.py  store.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: conftest.py  test_api.py  test_error_handling.py  test_session_persistence.py
src/backend/tests/unit/: test_anthropic_provider.py  test_chunker.py  test_classifier.py  test_context.py  test_embedder.py  test_evaluator.py  test_llm_logger.py  test_metadata.py  test_models.py  test_openai_provider.py  test_parser.py  test_persistence.py  test_prompts.py  test_provider.py  test_retriever.py  test_routes_helpers.py  test_session_routes.py  test_store.py
src/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  (+2 more)
(+28 files in other folders)
