[project]
name = "unravel-backend"
version = "0.1.0"
description = "Backend for Unravel - Kubernetes support bundle AI analyzer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "coverage>=7.6.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80
